--- a/css/style.css
+++ b/css/style.css
@@ -470,7 +470,7 @@ body.offcanvas .colorlib-nav-toggle {
 }
 @media screen and (max-width: 768px) {
   .colorlib-narrow-content {
-    padding: 0;
+    padding: 1em 1em !important;
   }
 }
 
